data/all_generated_tests/raw_wast_tests/loop_StackCorruption_346.wast
;; 7. **Complex Loop with Function Calls**    - Code loops containing calls to other functions that interact with the stack. Include instructions within the loops that modify local variables and enforce backward branches. Detect discrepancies in stack handling during function returns.

(assert_invalid
  (module (func $complex-loop-function-interaction
    (local i32)
    (loop (result i32)
      (call $someFunc)
      (br 0)
    )
  ))
  "function type mismatch"
)